# PIIS

./: .gitignore  .gitmodules
DeadRussians/: CMakeLists.txt  back.odt  document_converter.py  front.odt  lab_5.html  lab_5.ipynb  main.cpp  Панченко_Сергій_ІП-11_5.odt
Lab1/: .env  Cargo.toml  IP_11_Panchenko_1.odt  docker-compose.yml  perfomance_results.json  perfomance_test.sh  prepare_flights.py  queries.sql  stop_docker.sh
Lab1/data/: airlines.csv
Lab1/migrations/: migrations.sql
Lab1/src/: main.rs
Lab2/: .~lock.Панченко_Сергій_ІП-11_2.odt#  .~lock.Панченко_Сергій_ІП-11_2_2.odt#  .~lock.Панченко_Сергій_ІП-11_2_3.odt#  .~lock.Панченко_Сергій_ІП-11_2_4.odt#  PIIS.code-workspace  document_converter.py  elementsПанченко_Сергій_ІП-11_2.odt  front.odt  lab2.html  lab2.ipynb  lab2_2.ipynb  lab2_3.html  lab2_3.ipynb  lab2_4.html  lab2_4.ipynb  Панченко_Сергій_ІП-11_2.odt  Панченко_Сергій_ІП-11_2_2.odt  Панченко_Сергій_ІП-11_2_3.odt  Панченко_Сергій_ІП-11_2_4.odt
Lab3/: .~lock.Панченко_Сергій_ІП-11_3.odt#  document_converter.py  front.odt  lab3.html  lab3.ipynb  Панченко_Сергій_ІП-11_3.odt
