[package]
name = "Lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "tls-native-tls", "tls-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.19", features = ["derive"] }
itertools = "0.11.0"
thiserror = "1.0.44"
serde_json = "1.0.106"
